StudentRepository.xmlのタイポ修正
StudentRepositoryTestにEqualsとhashCodeを利用し、テストコードの修正を行いました。